AUTOMAKE_OPTIONS = -Wno-portability

include $(top_srcdir)/gnome-doc-utils.make
dist-hook: doc-dist-hook

DOC_MODULE = glom
DOC_ENTITIES =
DOC_INCLUDES = legal.xml 
DOC_FIGURES = \
	figures/glom_data_details.png \
	figures/glom_design_layout_details.png \
	figures/glom_design_reports.png \
	figures/glom_tables.png \
	figures/glom_data_list.png \
	figures/glom_design_layout_list.png \
	figures/glom_design_reports_vertical_group.png \
	figures/glom_import.png \
	figures/glom_initial_dialog_local_network.png \
	figures/start_open.png \
	figures/start_create.png \
	figures/glom_design_fields_dialog_calculated.png \
	figures/glom_design_reports_details.png \
	figures/glom_design_translations.png \
	figures/glom_design_fields.png \
	figures/glom_design_reports_group_by.png \
	figures/glom_report_result.png

DOC_LINGUAS = cs de el en_GB es fr sl sv
