AM_CPPFLAGS = -I@top_srcdir@/ -I@top_srcdir@/glom $(GLOM_CFLAGS)

h_sources = App_WithDoc.h App.h App_WithDoc_Gtk.h Dialog_OfferSave.h
cc_sources = App_WithDoc.cc App.cc App_WithDoc_Gtk.cc Dialog_OfferSave.cc

noinst_LIBRARIES = libbakery_app.a
libbakery_app_a_SOURCES = $(h_sources) $(cc_sources)

 

