AM_CPPFLAGS = -I@top_srcdir@/ -I@top_srcdir@/glom $(GLOM_CFLAGS) $(GLOM_WARNING_FLAGS)

h_sources = app_withdoc.h app.h app_withdoc_gtk.h dialog_offersave.h
cc_sources = app_withdoc.cc app.cc app_withdoc_gtk.cc dialog_offersave.cc

noinst_LIBRARIES = libbakery_app.a
libbakery_app_a_SOURCES = $(h_sources) $(cc_sources)

 

