INCLUDES = -I@top_srcdir@/ $(GLOM_CFLAGS)

noinst_LIBRARIES = libdata_structure.a
libdata_structure_a_SOURCES = field.h field.cc \
                              relationship.h relationship.cc \
                              fieldtypes.h fieldtypes.cc \
                              layoutitem.h layoutitem.cc \
                              layoutgroup.h layoutgroup.cc \
                              tableinfo.h tableinfo.cc \
                              glomconversions.h glomconversions.cc
                              
                              

                              
